k8s_files/ns_ing.yml
# ---------------------------------------------
# Namespace
# ---------------------------------------------
apiVersion: v1
kind: Namespace
metadata:
  name: naresh

# ---------------------------------------------
# Ingress
# ---------------------------------------------
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: libapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
